<resources>
    <string name="app_name">KEMockUI</string>
    <string name="hi_mike">Hi, Mike!</string>
    <string name="description">description</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="minutes">minutes</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="classes">Classes</string>
    <string name="homework">Homework</string>
    <string name="seconds">seconds</string>
    <string name="online">ONLINE</string>
    <string name="offline">Offline</string>
</resources>